// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Todos Default 1`] = `
<v-card
  class="dashboard-card feed-card"
>
  <v-card-title
    primary-title=""
  >
    <div
      class="title"
    >
      <span>
        <span>
          Todos
        </span>
      </span>
    </div>
  </v-card-title>
   
  <div
    class="card-scroll-content"
  >
    <v-container
      fluid=""
    >
      <v-list>
        <div
          class="todo"
        >
          <v-list-tile>
            <v-icon
              class="completed right"
              color="checkedColor"
            >
              mdi-checkbox-marked-circle
            </v-icon>
             
            <v-checkbox
              class="completed"
              label="Take out garbage."
            />
             
            <v-list-tile-action>
              <v-btn
                color="buttonColor"
                flat=""
                small=""
              >
                View
              </v-btn>
            </v-list-tile-action>
          </v-list-tile>
        </div>
        <div
          class="todo"
        >
          <v-list-tile>
            <v-icon
              class="completed right"
              color="checkedColor"
            >
              mdi-checkbox-marked-circle
            </v-icon>
             
            <v-checkbox
              class="completed"
              label="Empty the dishwasher."
            />
             
            <v-list-tile-action>
              <v-btn
                color="buttonColor"
                flat=""
                small=""
              >
                View
              </v-btn>
            </v-list-tile-action>
          </v-list-tile>
        </div>
        <div
          class="todo"
        >
          <v-list-tile>
            <!---->
             
            <v-checkbox
              class=""
              label="Pay the rent."
            />
             
            <v-list-tile-action>
              <v-btn
                color="buttonColor"
                flat=""
                small=""
              >
                View
              </v-btn>
            </v-list-tile-action>
          </v-list-tile>
        </div>
      </v-list>
       
    </v-container>
  </div>
</v-card>
`;

exports[`Storyshots Todos/Item Completed 1`] = `
<div
  class="todo"
>
  <v-list-tile>
    <v-icon
      class="completed right"
      color="checkedColor"
    >
      mdi-checkbox-marked-circle
    </v-icon>
     
    <v-checkbox
      class="completed"
      label="Take out the garbage."
    />
     
    <v-list-tile-action>
      <v-btn
        color="buttonColor"
        flat=""
        small=""
      >
        View
      </v-btn>
    </v-list-tile-action>
  </v-list-tile>
</div>
`;

exports[`Storyshots Todos/Item Incomplete 1`] = `
<div
  class="todo"
>
  <v-list-tile>
    <!---->
     
    <v-checkbox
      class=""
      label="Take out the garbage."
    />
     
    <v-list-tile-action>
      <v-btn
        color="buttonColor"
        flat=""
        small=""
      >
        View
      </v-btn>
    </v-list-tile-action>
  </v-list-tile>
</div>
`;

exports[`Storyshots Todos/List Todo List 1`] = `
<v-list>
  <todo-item
    item="[object Object]"
  />
  <todo-item
    item="[object Object]"
  />
  <todo-item
    item="[object Object]"
  />
</v-list>
`;
